Prevent scrollbar from shifting layout

--- a/apps/root/styles/global/base.scss
+++ b/apps/root/styles/global/base.scss
@@ -20,6 +20,10 @@
   background: #e5e5e5;
 }
 
+:root {
+  scrollbar-gutter: stable;
+}
+
 body {
   position: relative;
   display: flex;
